--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "BevyAI"
+name = "Bevy_AI"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.86"
 bevy = "0.13.2"
-bevy_pancam = "0.11.1"
-noise = "0.9.0"
-rand = "0.8.5"
+openai_api_rust = "0.1.9"
+reqwest = { version = "0.12.4", features = ["blocking"] }
 
 [workspace]
 resolver = "2" # Important! wgpu/Bevy needs this!
