--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ anyhow = "1.0.86"
 bevy = "0.13.2"
 openai_api_rust = "0.1.9"
 reqwest = { version = "0.12.4", features = ["blocking"] }
+image = "0.25.1"
+bevy_pancam = "0.11.1"
+noise = "0.9.0"
+rand = "0.8.5"
 
 [workspace]
 resolver = "2" # Important! wgpu/Bevy needs this!
